007 added code samples for chapter 6